cabal-version: >=1.8
Name:           DBPH
Version:        0.5.1.4
Description:    Experiments with flattening and algebraic compilation
License:             GPL
License-file:   LICENSE
Author:			Jeroen Weijers <jeroen.weijers@uni-tuebingen.de> 
Maintainer:		Jeroen Weijers <jeroen.weijers@uni-tuebingen.de>
Build-Type:     Simple
Library
    build-depends:    base >= 4.2, 
                      mtl >= 2.0, 
                      containers >= 0.3.0.0, 
                      template-haskell,
                      parsec >= 3.1, 
                      pretty >= 1.0.1.1, 
                      filepath >= 1.1.0.4,
                      haskell-src-exts >=1.9.6, 
                      hint >= 0.3.3.2,
                      TableAlgebra >= 0.7.0,
                      Pathfinder >= 0.5.7,
                      HaXml >= 1.20
    Hs-Source-Dirs:   src
    
    GHC-Options:       -O3 -Wall -fno-warn-type-defaults -fno-warn-unused-do-bind -fno-warn-orphans
    
    Exposed-modules: Language.ParallelLang.DBPH
                     Language.ParallelLang.NKL.Data.NKL
                     Language.ParallelLang.Common.Data.Val
                     Language.ParallelLang.Common.Data.Type
                     Language.ParallelLang.Common.Data.Op
                     Language.ParallelLang.VL.Data.Query
    Other-modules: Language.ParallelLang.FKL.Data.FKL
                   Language.ParallelLang.Common.Data.Config
                   Language.ParallelLang.FKL.Primitives
                   Language.ParallelLang.Translate.NKL2FKL
                   Language.ParallelLang.FKL.Render.Render
                   Language.ParallelLang.Common.Impossible
                   Language.ParallelLang.Translate.TransM
                   Language.ParallelLang.VL.Data.VectorTypes
                   Language.ParallelLang.VL.VectorPrimitives
                   Language.ParallelLang.Translate.Vec2Algebra
                   Language.ParallelLang.Translate.Detupler  
                   Language.ParallelLang.FKL.Data.WorkUnits
                   Language.ParallelLang.VL.Algebra
                   Language.ParallelLang.VL.MetaPrimitives
                   Language.ParallelLang.VL.VectorOperations
                   Language.ParallelLang.VL.VectorPrimitives
                   Language.ParallelLang.Translate.Algebra2SQL      