Name:                Ferry
Version:             0.1
Synopsis:            Ferry-powered Haskell
Description:         Ferry-powered Haskell
License:             BSD3
License-file:        LICENSE
Author:              George Giorgidze, Tom Schreiber and Jeroen Weijers
Maintainer:          george.giorgidze@uni-tuebingen.de
Stability:           Experimental
Category:            Database
Build-type:          Simple

-- Extra-source-files:

Cabal-version:       >=1.2


Library
  Build-depends:     base >= 4, containers, template-haskell, haskell-src-exts, syntax-trees
  Hs-Source-Dirs:    src
  GHC-Options:       -Wall
  Exposed-modules:   Ferry
  Other-modules:     Ferry.Internals.QQ
                     Ferry.Internals.Impossible
