Name:                Ferry
Version:             0.1
Synopsis:            Ferry-powered Haskell
Description:         Ferry-powered Haskell
License:             BSD3
License-file:        LICENSE
Author:              George Giorgidze, Tom Schreiber, Nils Schweinsberg and Jeroen Weijers
Maintainer:          george.giorgidze@uni-tuebingen.de
Stability:           Experimental
Category:            Database
Build-type:          Simple

-- Extra-source-files:

Cabal-version:       >=1.2


Library
  Build-depends:     base >= 4, containers, template-haskell, haskell-src-exts,
                     syntax-trees, syb >=0.1.0.2, HDBC >= 2.2,
                     convertible >= 0.1, bytestring >= 0.9, mtl

  Hs-Source-Dirs:    src
  GHC-Options:       -Wall -O3
  Exposed-modules:   Ferry

  Other-modules:     Ferry.QQ
                     Ferry.Impossible
                     Ferry.Combinators
                     Ferry.TH
                     Ferry.Data
                     Ferry.Evaluate
                     Ferry.Class
