Name:                Ferry
Version:             0.1
Synopsis:            Ferry-powered Haskell
Description:         Ferry-powered Haskell
License:             BSD3
License-file:        LICENSE
Author:              George Giorgidze, Tom Schreiber, Nils Schweinsberg and Jeroen Weijers
Maintainer:          george.giorgidze@uni-tuebingen.de
Stability:           Experimental
Category:            Database
Build-type:          Simple

-- Extra-source-files:

Cabal-version:       >=1.2


Library
  Build-depends:     base >= 4, containers >= 0.3.0.0, template-haskell >= 2.4.0.0, 
                     haskell-src-exts >= 1.9.0, syntax-trees >= 0.1.2, 
                     syb >=0.1.0.2, HDBC >= 2.2, convertible >= 0.1, 
                     bytestring >= 0.9, mtl >= 1.1.0.0, Ferryc >= 0.2

  Hs-Source-Dirs:    src
  Extensions:        TemplateHaskell, ViewPatterns, MultiParamTypeClasses, DeriveDataTypeable,
                     FunctionalDependencies, FlexibleInstances, TypeSynonymInstances, ScopedTypeVariables
  GHC-Options:       -Wall -fno-warn-orphans -O3
  Exposed-modules:   Ferry

  Other-modules:     Ferry.QQ
                     Ferry.Impossible
                     Ferry.Combinators
                     Ferry.TH
                     Ferry.Data
                     Ferry.Evaluate
                     Ferry.Class
                     Paths_Ferry
